--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+  font-family: 'Poppins', sans-serif;
+}
 .boxWidth {
   @apply max-w-[1440px] mx-auto
 }
